Started The Admin Dashboard

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "uuid": "^9.0.1",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
+    "vue3-charts": "^1.1.33",
     "vuex": "^4.0.0",
     "whatwg-fetch": "^3.6.20"
   },
