--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gsap": "^3.12.5",
     "register-service-worker": "^1.7.2",
     "vue": "^3.2.13",
+    "vue-cookies": "^1.8.3",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
   },
