--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.5.1",
     "algoliasearch": "^4.23.2",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
