--- a/package.json
+++ b/package.json
@@ -34,9 +34,11 @@
     "@vue/cli-service": "^5.0.8",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "php-loader": "^0.2.0",
     "postcss-loader": "^8.1.1",
     "sass": "^1.32.7",
     "sass-loader": "^12.0.0",
-    "vue-loader": "^17.4.2"
+    "vue-loader": "^17.4.2",
+    "webpack": "^5.91.0"
   }
 }
