--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "sass": "^1.32.7",
     "sass-loader": "^12.0.0",
     "vue-loader": "^17.4.2",
+    "vue-template-compiler": "^2.7.16",
     "webpack": "^5.91.0"
   }
 }
