--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vue": "^3.2.13",
     "vue-cookies": "^1.8.3",
     "vue-router": "^4.0.3",
+    "vue-sidebar-menu": "^5.3.1",
     "vue3-charts": "^1.1.33",
     "vuex": "^4.0.0",
     "whatwg-fetch": "^3.6.20"
